cmake_minimum_required(VERSION 3.30)
project(Starting_Out_With_Cpp)

set(CMAKE_CXX_STANDARD 23)

add_executable(chapter_2 Programming_Challenges/chapter_2/main.cpp)
add_executable(test_chapter_3 chapters/chapter_3/output_padding.cpp)
add_executable(chapter_4 chapters/chapter_4/switchs.cpp)
add_executable(write_to_file chapters/chapter_5/writeToFile.cpp)
add_executable(userEnteredData chapters/chapter_5/userEnteredData.cpp)
add_executable(friends chapters/chapter_5/friends.cpp)
add_executable(readFile chapters/chapter_5/readFile.cpp)
add_executable(numericStream chapters/chapter_5/numericStream.cpp)
add_executable(loopStream chapters/chapter_5/loopStream.cpp)
add_executable(createFileName chapters/chapter_5/createFileName.cpp)
add_executable(break chapters/chapter_5/break.cpp)
add_executable(random chapters/chapter_5/random.cpp)
