cmake_minimum_required(VERSION 3.30)
project(Starting_Out_With_Cpp)

set(CMAKE_CXX_STANDARD 23)

add_executable(chapter_2 Programming_Challenges/chapter_2/main.cpp)
add_executable(test_chapter_3 chapters/chapter_3/output_padding.cpp)
add_executable(chapter_4 chapters/chapter_4/switchs.cpp)
add_executable(write_to_file chapters/chapter_5/writeToFile.cpp)
add_executable(userEnteredData chapters/chapter_5/userEnteredData.cpp)
add_executable(friends chapters/chapter_5/friends.cpp)
add_executable(readFile chapters/chapter_5/readFile.cpp)
add_executable(numericStream chapters/chapter_5/numericStream.cpp)
add_executable(loopStream chapters/chapter_5/loopStream.cpp)
add_executable(createFileName chapters/chapter_5/createFileName.cpp)
add_executable(break chapters/chapter_5/break.cpp)
add_executable(random chapters/chapter_5/random.cpp)
add_executable(main Programming_Challenges/chapter_5/main.cpp)
add_executable(question1 Programming_Challenges/chapter_5/question1.cpp)
add_executable(question2 Programming_Challenges/chapter_5/question2.cpp)
add_executable(question3 Programming_Challenges/chapter_5/question3.cpp)
add_executable(question4 Programming_Challenges/chapter_5/question4.cpp)
add_executable(question5 Programming_Challenges/chapter_5/question5.cpp)
add_executable(question6 Programming_Challenges/chapter_5/question6.cpp)
add_executable(question7 Programming_Challenges/chapter_5/question7.cpp)
add_executable(question8 Programming_Challenges/chapter_5/question8.cpp)
add_executable(question9 Programming_Challenges/chapter_5/question9.cpp)
