cmake_minimum_required(VERSION 3.30)
project(Starting_Out_With_Cpp)

set(CMAKE_CXX_STANDARD 23)

add_executable(chapter_2 Programming_Challenges/chapter_2/main.cpp)
add_executable(test_chapter_3 chapters/chapter_3/output_padding.cpp)
add_executable(chapter_4 chapters/chapter_4/switchs.cpp)
add_executable(write_to_file chapters/chapter_5/writeToFile.cpp)
add_executable(userEnteredData chapters/chapter_5/userEnteredData.cpp)
add_executable(friends chapters/chapter_5/friends.cpp)
add_executable(readFile chapters/chapter_5/readFile.cpp)
add_executable(numericStream chapters/chapter_5/numericStream.cpp)
add_executable(loopStream chapters/chapter_5/loopStream.cpp)
add_executable(createFileName chapters/chapter_5/createFileName.cpp)
add_executable(break chapters/chapter_5/break.cpp)
add_executable(random chapters/chapter_5/random.cpp)
add_executable(main Programming_Challenges/chapter_5/main.cpp)
add_executable(question1 Programming_Challenges/chapter_5/question1.cpp)
add_executable(question2 Programming_Challenges/chapter_5/question2.cpp)
add_executable(question3 Programming_Challenges/chapter_5/question3.cpp)
add_executable(question4 Programming_Challenges/chapter_5/question4.cpp)
add_executable(question5 Programming_Challenges/chapter_5/question5.cpp)
add_executable(question6 Programming_Challenges/chapter_5/question6.cpp)
add_executable(question7 Programming_Challenges/chapter_5/question7.cpp)
add_executable(question8 Programming_Challenges/chapter_5/question8.cpp)
add_executable(question9 Programming_Challenges/chapter_5/question9.cpp)
add_executable(question10 Programming_Challenges/chapter_5/question10.cpp)
add_executable(question11 Programming_Challenges/chapter_5/question11.cpp)
add_executable(question12 Programming_Challenges/chapter_5/question12.cpp)
add_executable(template Programming_Challenges/chapter_5/template.cpp)
add_executable(question13 Programming_Challenges/chapter_5/question13.cpp)
add_executable(question14 Programming_Challenges/chapter_5/question14.cpp)
add_executable(question15 Programming_Challenges/chapter_5/question15.cpp)
add_executable(question16 Programming_Challenges/chapter_5/question16.cpp)
add_executable(question17 Programming_Challenges/chapter_5/question17.cpp)
add_executable(question18 Programming_Challenges/chapter_5/question18.cpp)
add_executable(question19 Programming_Challenges/chapter_5/question19.cpp)
add_executable(question20 Programming_Challenges/chapter_5/question20.cpp)
add_executable(question21 Programming_Challenges/chapter_5/question21.cpp)
add_executable(question22 Programming_Challenges/chapter_5/question22.cpp)
add_executable(question23 Programming_Challenges/chapter_5/question23.cpp)
add_executable(question24 Programming_Challenges/chapter_5/question24.cpp)
add_executable(question25 Programming_Challenges/chapter_5/question25.cpp)
add_executable(question26 Programming_Challenges/chapter_5/question26.cpp)
add_executable(question27 Programming_Challenges/chapter_5/question27.cpp)
add_executable(reference chapters/chapter_6/reference.cpp)
add_executable(overload chapters/chapter_6/overload.cpp)
add_executable(overloadPart2 chapters/chapter_6/overloadPart2.cpp)
add_executable(stubDriver chapters/chapter_6/stubDriver.cpp)
add_executable(questionx Programming_Challenges/chapter_6/question3.cpp)
add_executable(question6_4 Programming_Challenges/chapter_6/question4.cpp)
add_executable(templateProblem Programming_Challenges/chapter_6/templateProblem.cpp)
add_executable(question6_5 Programming_Challenges/chapter_6/question5.cpp)
add_executable(question6_6 Programming_Challenges/chapter_6/question6.cpp)
add_executable(question6_7 Programming_Challenges/chapter_6/question7.cpp)
add_executable(question6_8 Programming_Challenges/chapter_6/question8.cpp)
add_executable(question6_9 Programming_Challenges/chapter_6/question9.cpp)
add_executable(question6_10 Programming_Challenges/chapter_6/question10.cpp)
add_executable(question6_11 Programming_Challenges/chapter_6/question11.cpp)
add_executable(question6_12 Programming_Challenges/chapter_6/question12.cpp)
add_executable(question6_13 Programming_Challenges/chapter_6/question13.cpp)
add_executable(question6_14 Programming_Challenges/chapter_6/question14.cpp)
add_executable(question6_15 Programming_Challenges/chapter_6/question15.cpp)
add_executable(question6_16 Programming_Challenges/chapter_6/question16.cpp)
add_executable(question6_17 Programming_Challenges/chapter_6/question17.cpp)
add_executable(question6_18 Programming_Challenges/chapter_6/question18.cpp)
add_executable(question6_19 Programming_Challenges/chapter_6/question19.cpp)
add_executable(question6_22 Programming_Challenges/chapter_6/question22.cpp)
add_executable(question6_23 Programming_Challenges/chapter_6/question23.cpp)
add_executable(rps Projects/RPS/rps.cpp)
add_executable(travelExpenses Group_Projects/Travel_Expenses/travelExpenses.cpp)
add_executable(readfilearray chapters/chapter_7/readingFileArray.cpp)
add_executable(outbound chapters/chapter_6/outbound.cpp)
add_executable(rangeReference chapters/chapter_6/rangeReference.cpp)
add_executable(twoarray chapters/chapter_7/twoarray.cpp)
add_executable(twod_p2 chapters/chapter_7/twod_p2.cpp)
add_executable(sum2d chapters/chapter_7/sumElements2d.cpp)
add_executable(calc2drows chapters/chapter_7/calc2drows.cpp
        chapters/chapter_7/twodcolcalc.cpp)
add_executable(vectors chapters/chapter_7/vectors.cpp)
add_executable(bubbleSort Projects/DSA/Sorting_Algorithm/bubbleSort.cpp)
